--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 </script>
 
 <body>
-    <h1>STL to GLB Converter</h1>
+    <h1>3D-View of STL-File</h1>
     <div id="dragAndDrop"
          ondragenter="event.stopPropagation(); event.preventDefault();"
          ondragover="event.stopPropagation(); event.preventDefault();"
