Change style of displaying 3d

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
     box-shadow: 0 0 0 1px silver;
 }
 
-#model-viewer[src=''] {
-    display: none;
+#upload-gitf {
+    left: 50px; 
+    height: 300px; 
+    width: 300px; 
 }
 
 </style>
