--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
 
 #upload-gitf {
     left: 50px; 
-    height: 300px; 
-    width: 300px; 
+    resize: both;
+    overflow: auto;
+}
+
+::-webkit-resizer{  	
+    border: 9px solid rgba(0,0,0,.1); 	
+    border-bottom-color: rgba(0,0,0,.5); 	
+    border-right-color: rgba(0,0,0,.5); 	
+    outline: 1px solid rgba(0,0,0,.2); 	
+    box-shadow: 0 0 5px 3px rgba(0,0,0,.1);
 }
 
 </style>
