--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
     </div>
     <a id="download"><button id="download_button" disabled>Click to Download compressed stl</button></a>
     <div>
-        <model-viewer id="upload-gltf" alt="3d-View of uploaded stl" src="untitled.glb" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+        <model-viewer id="upload-gltf" alt="3d-View of uploaded stl" src="modelUV.glb" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
         <!-- <model-viewer id="upload-gltf" alt="3d-View of uploaded stl" src="#" shadow-intensity="1" camera-controls touch-action="pan-y"> -->
             <div class="controls">
                 <!-- <div>
