correct name of normal image

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                       <option value="https://lschoenepxc.github.io/textures/texture-normal.jpg">Normal</option>
                       <option value="https://lschoenepxc.github.io/textures/Lantern_normal.png">Lantern Pole</option>
                       <option value="https://lschoenepxc.github.io/textures/gerillt-normal.jpg">Gerillt</option>
-                      <option value="https://lschoenepxc.github.io/textures/PA12-normal.jpg">PA12</option>
+                      <option value="https://lschoenepxc.github.io/textures/PA12-normal.png">PA12</option>
                     </select>
                 </div>
                 <!-- <div>
