Added texture with direction

--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@
                       <option value="https://lschoenepxc.github.io/textures/Lantern_normal.png">Lantern Pole</option>
                       <option value="https://lschoenepxc.github.io/textures/gerillt-normal.jpg">Gerillt</option>
                       <option value="https://lschoenepxc.github.io/textures/PA12-normal.png">PA12</option>
+                      <option value="https://lschoenepxc.github.io/textures/brick_normal_map.png">Brick Wall</option>
                     </select>
                 </div>
                 <div>
